# typing

./: index.html  manifest.json  package.json
.github/workflows/: tauri.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
