[package]
    name = "app"
    version = "0.1.0"
    description = "A Tauri App"
    authors = ["you"]
    edition = "2021"
    rust-version = "1.70"
    
    [build-dependencies]
    tauri-build = { version = "1.5", features = [] }
    
    [dependencies]
    serde_json = "1.0"
    serde = { version = "1.0", features = ["derive"] }
    tauri = { version = "1.5", features = ["shell-open"] }
    
    [features]
    custom-protocol = ["tauri/custom-protocol"]